--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -3,6 +3,7 @@
   grid-template-columns: 1fr 1fr 1fr;
   grid-row-gap: 2.5em;
   grid-column-gap: 3.5em;
+  margin-right: 2em;
 }
 
 // Smallest device
