--- a/app/views/bookings/_form_edit.html.erb
+++ b/app/views/bookings/_form_edit.html.erb
@@ -1,9 +1,12 @@
-<%= simple_form_for (booking), html: { data: { controller: 'datepicker', datepicker_booking_value: booking.monument.bookings.to_json }} do |b| %>
+<%= simple_form_for (booking), html: { data: { controller: 'datepicker', datepicker_booking_value: booking.monument.bookings.to_json, datepicker_monument_value: booking.monument.to_json }} do |b| %>
   <%= b.input :start_date,
               as: :string,
-              input_html: { data: { datepicker_target: "start", action: "change->datepicker#checkDates change->datepicker#endDate" } } %>
+              input_html: { data: { datepicker_target: "start", action: "change->datepicker#checkDates change->datepicker#endDate change->datepicker#priceCalc" } } %>
   <%= b.input :end_date,
               as: :string,
-              input_html: { data: { datepicker_target: "end", action: "change->datepicker#checkDates change->datepicker#startDate" } } %>
-  <%= b.submit 'Submit', data: { datepicker_target: "sub" } %>
+              input_html: { data: { datepicker_target: "end", action: "change->datepicker#checkDates change->datepicker#startDate change->datepicker#priceCalc" } } %>
+  <div class="d-flex flex-column">
+    <%= b.submit 'Submit', data: { datepicker_target: "sub" } %>
+    <p data-datepicker-target="price" class="mt-2"></p>
+  </div>
 <% end %>
