--- a/app/views/monuments/show.html.erb
+++ b/app/views/monuments/show.html.erb
@@ -1,88 +1,90 @@
 <div class="row">
-  <div class="col-8 border border-secondary rounded me-3 ">
-    <div id="carouselExampleIndicators" class="carousel slide ">
-      <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-      </div>
-      <% if @monument.photos != nil %>
-        <div class="carousel-inner">
-            <% @monument.photos.each do |photo| %>
-          <div class="carousel-item active">
-              <%= cl_image_tag(photo.key, width: 750, height: 300, crop: :fill) %>
-          </div>
-            <% end %>
-      <% end %>
-
+  <div class="d-flex justify-content-between">
+    <div class="col-8 border border-secondary rounded me-3 ">
+      <div id="carouselExampleIndicators" class="carousel slide ">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-
-
-    <div class="row justify-content-between p-2">
-      <div class="col-8 mt-3">
-        <h1><%= @monument.name %></h1>
-
-        <% if @monument.user == current_user %>
-          <div class="row justify-content-start mb-3">
-            <%= link_to 'Edit', edit_monument_path, class:"btn btn-outline-success col-3 me-3"  %>
-            <%= link_to 'Delete', monument_path(@monument), class:"btn btn-outline-danger col-3", data:{ turbo_method:'delete', turbo_confirm:"You are about to delete this monument. Do you want to continu?"}  %>
-          </div>
-        <% else %>
-          <div data-controller="toggle" class="mb-3">
-            <button data-action="click->toggle#fire" class="btn btn-primary mt-3 col-3">Book</button>
-            <% if @booking.errors.any? %>
-              <div data-toggle-target="togglableElement">
-                <%= render "shared/form", monument: @monument, booking: @booking %>
-              </div>
-            <% else %>
-              <div data-toggle-target="togglableElement" class="d-none">
-                <%= render "shared/form", monument: @monument, booking: @booking %>
-              </div>
-            <% end %>
-          </div>
+        <% if @monument.photos != nil %>
+          <div class="carousel-inner">
+              <% @monument.photos.each do |photo| %>
+            <div class="carousel-item active">
+                <%= cl_image_tag(photo.key, width: 750, height: 300, crop: :fill) %>
+            </div>
+              <% end %>
         <% end %>
-        <p><%= @monument.description %></p>
-      </div>
-      <div class="col-3 m-1 pt-2 border border-secondary rounded text-end ">
-        <p><strong>Price :</strong></p>
-        <h6 class="mt-3 "><%= @monument.price %> $ / Night</h6>
-        <p class="mt-3"><strong>Rating :</strong></p>
-        <h6> <%= @monument.rate %> / 5</h6>
-      </div>
-    </div>
-  </div>
 
-<%# avatar, username, address and availability %>
-  <div class="col-3">
-    <div class="border border-secondary mb-3 rounded">
-      <div class="text-center mt-3">
-        <% if @monument.user.photo != nil %>
-          <%= cl_image_tag(@monument.user.photo.key, class:"avatar") %>
-        <% else %>
-          <i class="fa-solid fa-user avatar"></i>
-        <% end %>
-        <h6 class='mt-2'><strong><%= @monument.user.username %></strong></h6>
+          </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
-      <hr>
-      <div class="col-9">
-        <p class="mx-3"><%= @monument.address %></p>
+
+
+      <div class="row justify-content-between p-2">
+        <div class="col-8 mt-3">
+          <h1><%= @monument.name %></h1>
+
+          <% if @monument.user == current_user %>
+            <div class="row justify-content-start mb-3">
+              <%= link_to 'Edit', edit_monument_path, class:"btn btn-outline-success col-3 me-3"  %>
+              <%= link_to 'Delete', monument_path(@monument), class:"btn btn-outline-danger col-3", data:{ turbo_method:'delete', turbo_confirm:"You are about to delete this monument. Do you want to continu?"}  %>
+            </div>
+          <% else %>
+            <div data-controller="toggle" class="mb-3">
+              <button data-action="click->toggle#fire" class="btn btn-primary mt-3 col-3">Book</button>
+              <% if @booking.errors.any? %>
+                <div data-toggle-target="togglableElement">
+                  <%= render "shared/form", monument: @monument, booking: @booking %>
+                </div>
+              <% else %>
+                <div data-toggle-target="togglableElement" class="d-none">
+                  <%= render "shared/form", monument: @monument, booking: @booking %>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+          <p><%= @monument.description %></p>
+        </div>
+        <div class="col-3 m-1 pt-2 border border-secondary rounded text-end ">
+          <p><strong>Price :</strong></p>
+          <h6 class="mt-3 "><%= @monument.price %> $ / Night</h6>
+          <p class="mt-3"><strong>Rating :</strong></p>
+          <h6> <%= @monument.rate %> / 5</h6>
+        </div>
       </div>
     </div>
-    <div>
-      <div class="map-index" style="width: 100%; height: 600px;"
-        id="map-monument"
-        data-controller="map"
-        data-map-markers-value="<%= @markers.to_json %>"
-        data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+
+  <%# avatar, username, address and availability %>
+    <div class="col-3">
+      <div class="border border-secondary mb-5 rounded">
+        <div class="text-center mt-3">
+          <% if @monument.user.photo != nil %>
+            <%= cl_image_tag(@monument.user.photo.key, class:"avatar") %>
+          <% else %>
+            <i class="fa-solid fa-user avatar"></i>
+          <% end %>
+          <h6 class='mt-2'><strong><%= @monument.user.username %></strong></h6>
+        </div>
+        <hr>
+        <div class="col-9">
+          <p class="mx-3"><%= @monument.address %></p>
+        </div>
+      </div>
+      <div>
+        <div class="map-index" style="width: 100%; height: 500px;"
+          id="map-monument"
+          data-controller="map"
+          data-map-markers-value="<%= @markers.to_json %>"
+          data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+        </div>
       </div>
     </div>
   </div>
@@ -104,5 +106,4 @@
       <% end %>
     </div>
   </div>
-
 </div>
