--- a/app/views/dashboards/profile.html.erb
+++ b/app/views/dashboards/profile.html.erb
@@ -1,44 +1,100 @@
-<h1 class='text-center'><%= current_user.username.capitalize %>'s dashboard</h1>
+<h1 class='text-center mb-5'><%= current_user.username.capitalize %>'s dashboard</h1>
 
-<h3>Future bookings</h3>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-8 mb-3 rownp">
+      <h3>Future bookings</h3>
+    </div>
+  </div>
+</div>
 
-<% if @future_bookings != []%>
-  <% @future_bookings.each do |booking| %>
-    <% if booking.start_date >= Date.today %>
-      <%= link_to booking_path(booking), class: "text-decoration-none link-dark mb-3" do %>
-        <div class="card-product mb-3">
-          <% booking.monument.photos.each do |photo| %>
-            <%= cl_image_tag(photo.key, width: 400, height: 300, crop: :fill) %>
-          <% end %>
-          <div class="card-product-infos">
-            <div>
-              <h2><%= booking.monument.name %></h2>
-              <p><%= booking.start_date %> au <%= booking.end_date %></p>
-              <p><%= booking.total_price %> $</p>
-            </div>
-            <% if booking.status == 'Accepted' %>
-              <span class="badge bg-success">Accepted</span>
-            <% elsif booking.status == 'Pending' %>
-              <span class="badge bg-warning">Pending</span>
-            <% else %>
-              <span class="badge bg-danger">Rejected</span>
-            <% end %>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-  <% end %>
-<% else %>
+<% if @future_bookings == []%>
   <h5 class= "text-center">You don't have any reservation</h5>
   <p class= "text-center"> <%= link_to 'Click here to start your experience', monuments_path %> </p>
+<% else %>
+  <div class="container ">
+      <% @future_bookings.each do |booking| %>
+        <% if booking.start_date >= Date.today %>
+          <% if booking.status == "Accepted" %>
+            <%= link_to booking_path(booking), class: "text-decoration-none link-dark mb-3" do %>
+              <div class="row justify-content-center">
+                <div class="card-product col-8 mb-3 rownp">
+                  <%= cl_image_tag(booking.monument.photos.first.key, width: 400, height: 300, crop: :fill) %>
+                  <div class="card-product-infos ">
+                    <div>
+                      <h2><%= booking.monument.name %></h2>
+                      <p><%= booking.start_date %> au <%= booking.end_date %></p>
+                      <p><%= booking.total_price %> $</p>
+                    </div>
+                  </div>
+                  <div class="d-flex alignement">
+                    <h5 class="justify-content-end"><span class="badge bg-success ">Accepted</span></h5>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          <% end %>
+        <% end %>
+      <% end %>
+      <% @future_bookings.each do |booking| %>
+        <% if booking.start_date >= Date.today %>
+          <% if booking.status == "Pending" %>
+              <%= link_to booking_path(booking), class: "text-decoration-none link-dark mb-3" do %>
+                <div class="row justify-content-center">
+                  <div class="card-product col-8 mb-3 rownp">
+                    <% booking.monument.photos.each do |photo| %>
+                      <%= cl_image_tag(photo.key, width: 500, height: 300, crop: :fill) %>
+                    <% end %>
+                    <div class="card-product-infos ">
+                      <div>
+                        <h2><%= booking.monument.name %></h2>
+                        <p><%= booking.start_date %> au <%= booking.end_date %></p>
+                        <p><%= booking.total_price %> $</p>
+                      </div>
+                    </div>
+                    <div class="d-flex alignement">
+                      <h5><span class="badge bg-warning ">Pending </span></h5>
+                    </div>
+                  </div>
+                </div>
+              <% end %>
+            <% end %>
+          <% end %>
+        <% end %>
+      <% @future_bookings.each do |booking| %>
+        <% if booking.start_date >= Date.today %>
+          <% if booking.status == "Rejected" %>
+            <%= link_to booking_path(booking), class: "text-decoration-none link-dark mb-3" do %>
+              <div class="row justify-content-center">
+                <div class="card-product col-8 mb-3 rownp">
+                  <% booking.monument.photos.each do |photo| %>
+                    <%= cl_image_tag(photo.key, width: 400, height: 300, crop: :fill) %>
+                  <% end %>
+                  <div class="card-product-infos ">
+                    <div>
+                      <h2><%= booking.monument.name %></h2>
+                      <p><%= booking.start_date %> au <%= booking.end_date %></p>
+                      <p><%= booking.total_price %> $</p>
+                    </div>
+                  </div>
+                  <div class="d-flex alignement">
+                    <h5><span class="badge bg-danger ">Rejected</span></h5>
+                  </div>
+                </div>
+              </div>
+            <% end %>
+          <% end %>
+        <% end %>
+      <% end %>
+  </div>
 <% end %>
 
 <% if @demands != [] %>
   <hr>
-  <h3>My monument's requests</h3>
+  <h3 class="mb-5">My monument's requests</h3>
   <div class="row">
     <% @demands.each do |demand| %>
-      <div class="link col-6">
+      <div class="link col-6 mb-3">
         <%#= link_to monument_path(monument), class: "text-decoration-none link-dark mx-auto mb-3" do %>
           <div class="card-product" class="btn btn-sm btn-outline-warning" data-bs-toggle="modal" data-bs-target="#statusModal<%= demand.id %>">
             <%= cl_image_tag(demand.monument.photos.first.key, width: 400, height: 300, crop: :fill) %>
@@ -68,11 +124,11 @@
 
 <% if @passed_bookings != []%>
   <hr>
-  <h3>Passed bookings</h3>
+  <h3 class="mb-5">Passed bookings</h3>
   <div class="row">
     <% @passed_bookings.each do |booking| %>
         <% if booking.end_date < Date.today %>
-        <div class="link col-6">
+        <div class="link col-6 mb-3">
           <%= link_to booking_path(booking), class: "text-decoration-none link-dark mx-auto mb-3" do %>
           <div class="card-product" >
             <%= cl_image_tag(booking.monument.photos.first.key, width: 400, height: 300, crop: :fill) %>
@@ -89,29 +145,35 @@
   </div>
 <%end%>
 
-  <% if @monuments != [] %>
-    <hr>
-    <div class="d-flex justify-content-between mb-3">
-      <h3>My monuments</h3>
-      <%= link_to 'add a new monument', new_monument_path, class:"btn btn-outline-success" %>
-    </div>
-    <div class="row">
-      <% @monuments.each do |monument| %>
-        <div class="link col-6 mb-3">
-          <%= link_to monument_path(monument), class: "text-decoration-none link-dark mx-auto mb-3" do %>
-            <div class="card-product">
-              <%= cl_image_tag(monument.photos.first.key, width: 400, height: 300, crop: :fill) %>
-              <div class="card-product-infos">
-                <h2><%= monument.name %></h2>
-              </div>
-            </div>
-          <% end %>
+<% if @monuments != [] %>
+<hr>
+<div class="d-flex justify-content-between mb-3">
+  <h3 >My monuments</h3>
+  <%= link_to 'add a new monument', new_monument_path, class:"btn btn-outline-success" %>
+</div>
+<div class="row mt-3">
+  <% @monuments.each do |monument| %>
+    <div class="link col-6 mb-3">
+      <%= link_to monument_path(monument), class: "text-decoration-none link-dark mx-auto mb-3" do %>
+        <div class="card-product">
+          <%= cl_image_tag(monument.photos.first.key, width: 400, height: 300, crop: :fill) %>
+          <div class="card-product-infos">
+            <h2><%= monument.name %></h2>
+          </div>
         </div>
       <% end %>
     </div>
-  <% else %>
-    <hr>
-    <h3>My monuments</h3>
-    <h5 class= "text-center">You don't have any monument</h5>
-    <p class= "text-center"> <%= link_to 'Click here to add a new monument', new_monument_path %> </p>
   <% end %>
+</div>
+<% else %>
+<hr>
+<div class="container">
+  <div class="row justify-content-center">
+    <div class="col-8 mb-3 rownp">
+      <h3>My monuments</h3>
+    </div>
+  </div>
+</div>
+<h5 class= "text-center">You don't have any monument</h5>
+<p class= "text-center"> <%= link_to 'Click here to add a new monument', new_monument_path %> </p>
+<% end %>
