--- a/app/views/monuments/show.html.erb
+++ b/app/views/monuments/show.html.erb
@@ -27,19 +27,25 @@
         </button>
       </div>
 
-
-      <div class="row justify-content-between p-2">
-        <div class="col-8 mt-3">
-          <h1><%= @monument.name %></h1>
-
-          <% if @monument.user == current_user %>
-            <div class="row justify-content-start mb-3">
-              <%= link_to 'Edit', edit_monument_path, class:"btn btn-outline-success col-3 me-3"  %>
-              <%= link_to 'Delete', monument_path(@monument), class:"btn btn-outline-danger col-3", data:{ turbo_method:'delete', turbo_confirm:"You are about to delete this monument. Do you want to continu?"}  %>
+      <div class="container">
+        <div class="row justify-content-between p-2">
+          <div class="col-8 px-0">
+            <h1><%= @monument.name %></h1>
+            <p class="me-5"><%= @monument.description %></p>
+            <% if @monument.user == current_user %>
+              <div class="row justify-content-start mb-3">
+                <%= link_to 'Edit', edit_monument_path, class:"btn btn-outline-success col-3 mx-3"  %>
+                <%= link_to 'Delete', monument_path(@monument), class:"btn btn-outline-danger col-3", data:{ turbo_method:'delete', turbo_confirm:"You are about to delete this monument. Do you want to continu?"}  %>
+              </div>
+            <% end %>
+          </div>
+          <div class="col-4 border border-secondary rounded">
+            <div class="d-flex justify-content-between mt-3">
+              <p>⭐️ <%= @monument.rate %></p>
+              <p><%= @monument.price %> $ / night</p>
             </div>
-          <% else %>
-            <div data-controller="toggle" class="mb-3">
-              <button data-action="click->toggle#fire" class="btn btn-primary mt-3 col-3">Book</button>
+            <div data-controller="toggle" class="d-grid mb-3">
+              <button data-action="click->toggle#fire" class="btn btn-primary mt-1">Book</button>
               <% if @booking.errors.any? %>
                 <div data-toggle-target="togglableElement">
                   <%= render "shared/form", monument: @monument, booking: @booking %>
@@ -50,14 +56,7 @@
                 </div>
               <% end %>
             </div>
-          <% end %>
-          <p><%= @monument.description %></p>
-        </div>
-        <div class="col-3 m-1 pt-2 border border-secondary rounded text-end ">
-          <p><strong>Price :</strong></p>
-          <h6 class="mt-3 "><%= @monument.price %> $ / Night</h6>
-          <p class="mt-3"><strong>Rating :</strong></p>
-          <h6> <%= @monument.rate %> / 5</h6>
+          </div>
         </div>
       </div>
     </div>
