--- a/app/assets/stylesheets/components/_card-geo.scss
+++ b/app/assets/stylesheets/components/_card-geo.scss
@@ -28,16 +28,15 @@
 }
 
 .btn-flat {
-  color: #143495;
-  font-size: 12px;
-  color: white;
-  padding: 5px;
-  border-radius: 4px;
-  background: #143495;
-  transition: background 0.3s ease;
+  color: white!important;
+  background: #143495!important;
+  font-size: 12px!important;
+  padding: 5px!important;
+  border-radius: 4px!important;
 }
 
 .btn-flat:hover {
-  background: #143495;
-  color: white;
+  background: white!important;
+  color: #143495!important;
+  border: 2px solid #143495!important;
 }
