--- a/app/views/bookings/_form_edit.html.erb
+++ b/app/views/bookings/_form_edit.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for (booking), html: { data: { controller: 'datepicker', datepicker_booking_value: booking.monument.bookings.to_json, datepicker_monument_value: booking.monument.to_json }} do |b| %>
+<%= simple_form_for (booking), html: { data: { controller: 'datepicker', datepicker_booking_value: booking.monument.bookings.to_json, datepicker_monument_value: booking.monument.to_json, datepicker_curbooking_value: booking.to_json }} do |b| %>
   <%= b.input :start_date,
               as: :string,
               input_html: { data: { datepicker_target: "start", action: "change->datepicker#checkDates change->datepicker#endDate change->datepicker#priceCalc" } } %>
@@ -9,4 +9,14 @@
     <%= b.submit 'Submit', data: { datepicker_target: "sub" } %>
     <p data-datepicker-target="price" class="mt-2"></p>
   </div>
+<% end %>
+
+<%= simple_form_for (booking), html: { data: { controller: 'datepicker', datepicker_booking_value: booking.monument.bookings.to_json, datepicker_curbooking_value: booking.to_json }} do |b| %>
+  <%= b.input :start_date,
+              as: :string,
+              input_html: { data: { datepicker_target: "start", action: "change->datepicker#checkDates change->datepicker#endDate" } } %>
+  <%= b.input :end_date,
+              as: :string,
+              input_html: { data: { datepicker_target: "end", action: "change->datepicker#checkDates change->datepicker#startDate" } } %>
+  <%= b.submit 'Submit', data: { datepicker_target: "sub" } %>
 <% end %>
